--- a/templates/index.html
+++ b/templates/index.html
@@ -50,10 +50,10 @@
                 <img id="my_image" src="{{ url_for("static", filename="images/image31.png")  }}" class="rounded-circle imgcenter">
             </div>
             <div class="col-lg-8 my-auto">
-                    <h2 class="j1 pt-2 mx-auto text-light">
+                    <h2 class="j1 pt-2 mx-auto text-light" class="me_j">
                         I am Janith Ravisanka
                     </h2>
-                    <h3 class="mx-auto text-light">
+                    <h3 class="mx-auto text-light" class="me_r">
                         I am a Programmer <span style="color: black">•</span> a Web Developer <span style="color: black">•</span> an Influencer
                     </h3>
             </div>
@@ -63,7 +63,7 @@
     <!-- about -->
     <section id="about" class="">
         <div class="about">
-            <h2 class="text-light">Abot me ...</h2>
+            <h2 class="text-light">About me ...</h2>
         </div>
         <div>
             <p class="text-light " id="about_text">
